# AOS-2020

./: README.md
lab1/: CMakeLists.txt  main.c
lab1/task1/: main.c  t1
lab1/task10/: a1  main.c  t10
lab1/task11/: main.c  t11
lab1/task2/: azaza  main.c  t2
lab1/task4/: main.c  t4  whole
lab1/task7/: main.c  t7
lab1/task8/: fff  file1  main.c  t8
lab1/task9/: a2  main.c  t9
lab2/: CMakeLists.txt
lab2/task1/: main.c  t1
lab2/task10/: example  example.c  main.c  smth  smth.c  t10
lab2/task2/: main.c  script.sh  t2
lab2/task3/: main.c  t3
lab2/task4/: main.c  t4
lab2/task5/: main.c  t5
lab2/task6/: Father  Son  main.c  t6
lab2/task7/: Father  Son  main.c  t7
lab2/task8/: first  main.c  second  t8
lab2/task9/: main.c  second  t9
lab3/: CMakeLists.txt
lab3/task1/: main.c  t1
lab3/task10/: another  another.c  main.c  t10
lab3/task11/: another  another.c  main.c  t11
lab3/task2/: main.c  t2
lab3/task3/: main.c  t3
lab3/task4/: Status_31463_0  example.c  main.c  t4
lab3/task5/: alarm_ex_no_handle  alarm_ex_no_handle.c  alarm_ex_with_handle  alarm_ex_with_handle.c  example  main.c  pause_ex  pause_ex.c  signal_ex  signal_ex.c  t5
lab4/: CMakeLists.txt
lab4/task1/: main.c  main2.c  t1  t1_2
lab4/task10/: main.c  t10
lab4/task11/: main.c  t11
lab4/task4/: child  child.c  main.c  t4
lab4/task5/: some  (+5 more)
lab5/: .~lock.lab5.doc#  CMakeLists.txt  main.c
lab6/: CMakeLists.txt  client  client.c  config  journal  server  server.c  serverWithoutDaemon.c  test  test.c
Описания лабораторных работ/: Практикум_до_экзамена.xlsx
(+32 files in other folders)
