cmake_minimum_required(VERSION 3.17)
project(lab_1 C)


set(CMAKE_C_STANDARD 11)

add_executable(lab_1 main.c)
add_executable(main1 task1/main.c)
add_executable(main2 task2/main.c)
add_executable(main4 task4/main.c)
add_executable(main task10/main.c)
add_executable(main7 task7/main.c)
add_executable(main8 task8/main.c)
add_executable(main9 task9/main.c)
add_executable(main10 task10/main.c)
add_executable(main11 task11/main.c)
