cmake_minimum_required(VERSION 3.17)
project(lab3 C)

set(CMAKE_C_STANDARD 11)

add_executable(lab3 main.c)
add_executable(main1 task1/main.c)
add_executable(main2 task2/main.c)
add_executable(main3 task3/main.c)
add_executable(main4 task4/main.c)
add_executable(main5 task5/main.c)
add_executable(main10 task10/main.c)
add_executable(main11 task11/main.c)